# Password-Manager

./: .gitignore  Cargo.toml  README.md  password_manager_json.json
src/: TODO.txt  encryption_storage.json  main.rs  test_encrypt.rs
src/encryption/: aes_encryption.rs  encrypt_file.rs  encrypt_password.rs  encrypt_string.rs  hash.rs  mod.rs  string_encrypt.rs
src/encryption/util/: encrypt_util.rs  mod.rs
src/json/: file_exists.rs  init_json.rs  json_formatter.rs  json_structs.rs  mod.rs
src/password_generator/: password_generator.rs
src/ui/: build_table.rs  build_ui.rs  check_existing_user_handler.rs  create_pass_ui.rs  login_ui.rs  mod.rs  table_ui.rs  temp_global_master_pass.rs
src/ui/createpass/: create_pass_ui.rs  mod.rs
src/ui/login/: login_ui.rs  mod.rs
src/ui/table/: build_table.rs  mod.rs  table_ui.rs
src/ui/table/resetpass/: mod.rs
src/ui/util/: check_existing_user_handler.rs  mod.rs  temp_global_master_pass.rs
src/user_functions/: add_account.rs  check_for_account.rs  remove_account.rs
src/util_functions/: add_account.rs  check_for_account.rs  edit_account.rs  empty_list_check.rs  json_path.rs  mod.rs  remove_account.rs  set_master_pass_json.rs
