[package]
name = "password_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#JSON utils
serde_json = "1.0.59"
serde_derive = "1.0.117"
serde = "1.0.117"

#Encryption utils
chacha20poly1305 = "0.10.1"
aead = "0.5.1"
chacha20 = "0.9.0"
cipher = "0.4.3"
poly1305 = "0.8.0"
zeroize = "1.5.7"
rust-crypto="0.2.36"
bytes="1.1.0"
hex-literal="0.3.3"
rustc-serialize = "0.3"
hex = "0.4.3"
