[package]
name = "password_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#JSON utils
serde_json = "1.0.59"
serde_derive = "1.0.117"
serde = "1.0.117"

#Encryption utils
chacha20poly1305 = "0.10.1"
aead = "0.5.1"
chacha20 = "0.9.0"
cipher = "0.4.3"
poly1305 = "0.8.0"
zeroize = "1.5.7"
rust-crypto="0.2.36"
bytes="1.1.0"
hex-literal="0.3.3"
rustc-serialize = "0.3"
hex = "0.4.3"
gtk = { version = "0.5.2", package = "gtk4", features = ["v4_6"] }

#GTK utils
#chrono = "0.4"
#futures = "0.3"
#atk = "^0"
#glib-sys = "^0"
#gobject-sys = "^0"
#glib = "^0"
#gio = "^0"
#gdk = "^0"
#gdk-pixbuf = "^0"
#gtk = "^0"
#once_cell = "^0"
#pango = "^0"
#pangocairo = "^0"
#cairo-rs = { version = "^0", features = ["png"] }

[dependencies.async-tls]
version = "0.6"
optional = true

[features]
#default = ["gtk_3_22_30"]
#gtk_3_18 = ["gtk/v3_18", "gdk-pixbuf/v2_32", "gdk/v3_18", "glib/v2_46", "pango/v1_38"] #for CI tools
#gtk_3_22_30 = ["gtk_3_18", "gtk/v3_22_30", "gdk-pixbuf/v2_36", "gdk/v3_22", "glib/v2_56", "pango/v1_42"] #for CI tools
#gtk_3_24 = ["gtk_3_22_30", "gtk/v3_24", "atk/v2_30", "gdk-pixbuf/v2_36_8", "gdk/v3_24", "gio/v2_58", "glib/v2_58"] #for CI tools




