[package]
name = "password_manager"
#name = "Sammy_Safe"
#change to "Sammy_Safe" when build release
version = "0.1.0"
authors = ["Sam Bernau"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Set the target to "x86_64-apple-darwin"




[dependencies]
cargo-bundle = "0.6.0"
#JSON utils
serde_json = "1.0.59"
serde_derive = "1.0.117"
serde = "1.0.117"
lazy_static = "1.4"

#Encryption utils
chacha20poly1305 = "0.10.1"
aead = "0.5.1"
chacha20 = "0.9.0"
cipher = "0.4.3"
poly1305 = "0.8.0"
zeroize = "1.5.7"
rust-crypto="0.2.36"
bytes="1.1.0"
hex-literal="0.3.3"
rustc-serialize = "0.3"
hex = "0.4.3"


chrono = "0.4"
once_cell = "1.0"
gtk = { version = "0.5.2", package = "gtk4", features = ["v4_8"] }
adw = { version = "0.2.1", package = "libadwaita" }


[dependencies.async-tls]
version = "0.6"
optional = true

#[[bin]]
#name = "Sammy_Safe"
#path = "src/main.rs"
##crate-type = ["macos"]
#bundle = []
#[target.'cfg(target_os = "macos")'.dependencies]
#[target.'cfg(target_os = "macos")'.features]

